Fix Steam button getting misaligned at smaller sizes

--- a/static/brawlbracket/css/BrawlBracket.css
+++ b/static/brawlbracket/css/BrawlBracket.css
@@ -7,7 +7,7 @@ Sign in through Steam button
 }
 
 .navbar-nav > .login-button > a {
-  padding: 0;
+  padding: 0 !important;
 }
 
 .navbar-nav > .login-button > a:hover {
